# insights-ui-automation

./: .gitignore  LICENSE  README.md  docker-compose.yml  manage_allure.sh  pyproject.toml  pytest.ini
allure-report/: index.html
allure-report/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/data/attachments/: e14e07e8194dd697.txt  fee4c99a20d6c1e3.txt
allure-report/data/test-cases/: 74f65f11cf0ff76d.json  c9aa2fd73554d381.json
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: history.json
allure-report/widgets/: behaviors.json  duration-trend.json  environment.json  status-chart.json  summary.json
src/pytestifypro/config/: config.yaml
src/pytestifypro/data/queries/: get_historical_production_dates.sql  get_production_volume_data.sql  get_well_header_details.sql  get_well_versions.sql
src/pytestifypro/managers/: queries_manager.py
src/pytestifypro/tests/: conftest.py
src/pytestifypro/tests/features/: test_well_header.feature  test_wells_header.feature
src/pytestifypro/tests/steps/: test_well_header_steps.py  test_wells_header_steps.py
src/pytestifypro/ui/pages/: login_page.py  login_page_locators.py  wells_page.py  wells_page_locators.py
src/pytestifypro/utils/: ui_actions.py
